--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -44,8 +44,9 @@ body {
 }
 
 .calculator__display {
-	border-color: #00000050;
+	border: none;
 	border-radius: 1.6rem;
+	caret-color: transparent;
 	font-size: 4.8rem;
 	height: calc(var(--button-height) * 2);
 	margin-bottom: calc(var(--button-margin) * 4);
@@ -54,8 +55,11 @@ body {
 }
 
 .calculator__display::placeholder {
-	opacity: 50%;
 	padding: 0.8rem;
+}
+
+.calculator__display:focus {
+	outline: none;
 }
 
 [type='button'] {
@@ -113,4 +117,20 @@ input:last-child,
 input:last-child:active {
 	background: var(--theme-red);
 	color: var(--light-floral-white);
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background: var(--nero-black);
+		color: var(--light-floral-white);
+	}
+
+	.calculator__display {
+		background: var(--nero);
+		color: var(--light-floral-white);
+	}
+
+	.calculator__display::placeholder {
+		color: var(--light-floral-white);
+	}
 }
