--- a/css/preset.css
+++ b/css/preset.css
@@ -84,6 +84,9 @@
 @media only screen and (min-width: 120rem) {
 }
 
+@media (prefers-color-scheme: light) {
+}
+
 /* HOVER EVENTS */
 
 element:link {
