Code cleanup and file renames

--- a/css/preset.css
+++ b/css/preset.css
@@ -1,136 +1,95 @@
-/* PRESET FONT SIZE */
+* {
+	box-sizing: border-box;
+	padding: 0;
+	position: relative;
+}
 
 html {
-	font-size: 12px;
+	color: #222;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 62.5%;
+	line-height: 1.4;
 }
 
-/* COMMON MODIFIERS */
-
-.--clearfix::before,
-.--clearfix::after {
-	content: '';
-	display: table;
+::-moz-selection {
+	background: #b3d4fc;
+	text-shadow: none;
 }
 
-.--clearfix::after {
-	clear: both;
+::selection {
+	background: #b3d4fc;
+	text-shadow: none;
 }
 
-.--invisible {
-	visibility: hidden;
-}
-
-.--hidden,
-[hidden] {
-	display: none !important;
-}
-
-.--visually-hidden {
+hr {
+	display: block;
+	height: 1px;
 	border: 0;
-	clip: rect(0, 0, 0, 0);
-	height: 0.1rem;
-	margin: -0.1rem;
-	overflow: hidden;
-	position: absolute;
-	white-space: nowrap;
-	width: 0.1rem;
+	border-top: 1px solid #ccc;
+	margin: 1em 0;
+	padding: 0;
 }
 
-.--visually-hidden.focusable:active,
-.--visually-hidden.focusable:focus {
-	clip: auto;
-	height: auto;
-	overflow: visible;
-	position: static;
-	white-space: inherit;
-	width: auto;
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+	vertical-align: middle;
 }
 
-.--forced-unselectable {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+fieldset {
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 
-.--forced-selectable {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+textarea {
+	resize: vertical;
 }
 
-.element::-webkit-scrollbar {
-	display: none;
+a,
+a:visited {
+	text-decoration: underline;
 }
 
-.--scrollbar-hidden {
-	overflow: auto;
-	-ms-overflow-style: none;
-	scrollbar-width: none;
+a[href]::after {
+	content: ' (' attr(href) ')';
 }
 
-/* MEDIA QUERIES */
-
-@media print {
-	*,
-	*::before,
-	*::after {
-		background: #fff !important;
-		box-shadow: none !important;
-		color: #000 !important;
-		text-shadow: none !important;
-	}
+abbr[title]::after {
+	content: ' (' attr(title) ')';
 }
 
-@media print,
-	(min-resolution: 1.25dppx),
-	(min-resolution: 120dpi),
-	(-webkit-min-device-pixel-ratio: 1.25) {
+a[href^='#']::after,
+a[href^='javascript:']::after {
+	content: '';
 }
 
-@media only screen and (min-width: 320px) {
+pre {
+	white-space: pre-wrap !important;
 }
 
-@media only screen and (min-width: 600px) {
+pre,
+blockquote {
+	border: 1px solid #999;
+	page-break-inside: avoid;
 }
 
-@media only screen and (min-width: 768px) {
-	html {
-		font-size: 14px;
-	}
+tr,
+img {
+	page-break-inside: avoid;
 }
 
-@media only screen and (min-width: 992px) {
+p,
+h2,
+h3 {
+	orphans: 3;
+	widows: 3;
 }
 
-@media only screen and (min-width: 1200px) {
-	html {
-		font-size: 16px;
-	}
-}
-
-@media (prefers-color-scheme: light) {
-}
-
-@media (prefers-reduced-motion: reduce) {
-	* {
-		animation: none !important;
-		transition-duration: 0s !important;
-		transition-delay: 0s !important;
-	}
-}
-
-/* HOVER EVENTS */
-
-element:link {
-}
-
-element:visited {
-}
-
-element:hover {
-}
-
-element:active {
+h2,
+h3 {
+	page-break-after: avoid;
 }
