--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -1,10 +1,14 @@
 /* 
 
-BEM/PCM
+CLASS NAMING (BEM/camelCase)
 
-GROUPING RULES
+.blockClass__elementClass--modifierClass {
+	property-name: value;
+}
 
-groupingProperties {
+PROPERTY ORDER (By Type)
+
+propertyTypes {
 	box: ;
 
 	border: ;
@@ -24,21 +28,10 @@ groupingProperties {
 	--button-padding: 0.8rem;
 	--button-width: 4.2rem;
 
-	--light-floral-white: #fffffa;
-	--nero-black: #232323;
-	--nero-black-hover: hsla(0, 0%, 14%, 0.8);
-	--nero: #7d7d7d;
-	--nero-hover: hsla(0, 0%, 49%, 0.8);
-	--nero-grey: #d5d5d5;
-	--nero-grey-hover: hsla(0, 0%, 84%, 0.8);
+	--theme-black: #232323;
+	--theme-white: #fffffa;
+	--theme-grey: #d5d5d5;
 	--theme-red: #a00;
-	--theme-red-hover: hsla(0, 100%, 33%, 0.8);
-}
-
-* {
-	box-sizing: border-box;
-	padding: 0;
-	position: relative;
 }
 
 body {
@@ -48,38 +41,48 @@ body {
 	justify-content: center;
 	width: 100vw;
 
-	background: var(--light-floral-white);
+	background: var(--theme-grey);
 
-	color: var(--nero-black);
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	color: var(--theme-black);
+
 	font-size: 1.6rem;
 }
 
 .calculator {
-	box-shadow: 0 0 15px 5px #00000050;
-	height: fit-content;
-	padding: 1.6rem;
-	width: fit-content;
+	align-items: center;
+	box-shadow: 0 0 15px 5px #00000040;
+	display: flex;
+	flex-wrap: wrap;
+	height: 40rem;
+	justify-content: center;
+	padding: 0.8rem;
+	width: 25rem;
 
 	border-radius: 0.8rem;
 
+	background: inherit;
+
+	color: inherit;
 	text-align: center;
 }
 
 .calculator__display {
-	height: calc(var(--button-height) * 2);
-	margin-bottom: calc(var(--button-margin) * 3);
-	padding: 0.8rem;
+	box-shadow: none;
+	height: 20%;
 	resize: none;
-	width: calc(var(--button-width) * 4 + var(--button-margin) * 8);
+	width: 80%;
 
 	border: none;
-	border-radius: 0.32rem;
+
+	background: inherit;
 
 	caret-color: transparent;
+	color: inherit;
 	font-size: 3.2rem;
 	line-height: var(--button-height);
 	text-align: right;
+
+	cursor: default;
 }
 
 .calculator__display:focus {
@@ -87,6 +90,8 @@ body {
 }
 
 .calculator__display::placeholder {
+	color: inherit;
+
 	opacity: 50%;
 }
 
@@ -96,81 +101,34 @@ body {
 
 /* BUTTONS */
 
-[class$='Button'],
-.--active {
+[type='button'] {
 	height: var(--button-height);
 	margin: var(--button-margin);
-	padding: 0.8rem;
+	padding: var(--button-padding);
 	width: var(--button-width);
 
 	border: none;
 	border-radius: 50%;
 
+	background: var(--theme-white);
+
+	color: var(--theme-black);
+	font-size: 1.6rem;
 	text-align: center;
 
 	cursor: pointer;
 }
 
-[class$='Button'] {
-	filter: brightness(95%);
+[value='C'] {
+	color: var(--theme-red);
 }
 
-.--active {
-	filter: brightness(110%);
+[value='DEL'] {
+	color: var(--theme-red);
+	font-size: 1.2rem;
 }
 
-[value='0'] {
-	padding-left: calc(var(--button-width) / 2 - 0.56rem);
-	width: calc(var(--button-width) * 2 + var(--button-margin) * 4);
-
-	border-radius: 5rem;
-
-	text-align: left;
-}
-
-.specialButton,
-.specialButton:active {
-	background: var(--nero-grey);
-
-	color: var(--nero-black);
-}
-
-.digitButton,
-.digitButton:active {
-	background: var(--nero);
-
-	color: var(--light-floral-white);
-}
-
-.operatorButton,
-.operatorButton:active {
+[value='='] {
+	color: var(--theme-white);
 	background: var(--theme-red);
-
-	color: var(--light-floral-white);
-}
-
-/* MEDIA QUERIES */
-
-@media (hover: hover) and (pointer: fine) {
-	[class$='Button']:hover {
-		filter: brightness(110%);
-	}
-}
-
-@media (prefers-color-scheme: dark) {
-	body {
-		background: var(--nero-black);
-
-		color: var(--light-floral-white);
-	}
-
-	.calculator__display {
-		background: var(--nero);
-
-		color: var(--light-floral-white);
-	}
-
-	.calculator__display::placeholder {
-		color: var(--light-floral-white);
-	}
 }
