--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -1,26 +1,4 @@
-/* 
-
-CLASS NAMING (BEM/camelCase)
-
-.blockClass__elementClass--modifierClass {
-	property-name: value;
-}
-
-PROPERTY ORDER (By Type)
-
-propertyTypes {
-	box: ;
-
-	border: ;
-
-	background: ;
-
-	text: ;
-
-	other: ;
-}
-
-*/
+/* style.css - Customer Author Styles */
 
 :root {
 	--button-height: 4.2rem;
