--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -1,4 +1,231 @@
-/* style.css - Customer Author Styles */
+html {
+	line-height: 1.15;
+	-webkit-text-size-adjust: 100%;
+}
+
+body {
+	margin: 0;
+}
+
+main {
+	display: block;
+}
+
+h1 {
+	margin: 0.67em 0;
+
+	font-size: 2em;
+}
+
+hr {
+	box-sizing: content-box;
+	height: 0;
+
+	overflow: visible;
+}
+
+pre {
+	font-family: monospace, monospace;
+	font-size: 1em;
+}
+
+a {
+	background-color: transparent;
+}
+
+abbr[title] {
+	border-bottom: none;
+
+	text-decoration: underline;
+	text-decoration: underline dotted;
+}
+
+b,
+strong {
+	font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+	font-family: monospace, monospace;
+	font-size: 1em;
+}
+
+small {
+	font-size: 80%;
+}
+
+sub,
+sup {
+	position: relative;
+	vertical-align: baseline;
+
+	font-size: 75%;
+	line-height: 0;
+}
+
+sub {
+	bottom: -0.25em;
+}
+
+sup {
+	top: -0.5em;
+}
+
+img {
+	border-style: none;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+	margin: 0;
+
+	font-family: inherit;
+	font-size: 100%;
+	line-height: 1.15;
+}
+
+button,
+input {
+	overflow: visible;
+}
+
+button,
+select {
+	text-transform: none;
+}
+
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+	-webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
+	padding: 0;
+
+	border-style: none;
+}
+
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
+
+fieldset {
+	padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+	box-sizing: border-box;
+	display: table;
+	max-width: 100%;
+	padding: 0;
+
+	color: inherit;
+	white-space: normal;
+}
+
+progress {
+	vertical-align: baseline;
+}
+
+textarea {
+	overflow: auto;
+}
+
+[type='checkbox'],
+[type='radio'] {
+	padding: 0;
+
+	box-sizing: border-box;
+}
+
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+	height: auto;
+}
+
+[type='search'] {
+	-webkit-appearance: textfield;
+	outline-offset: -2px;
+}
+
+[type='search']::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	font: inherit;
+}
+
+details {
+	display: block;
+}
+
+summary {
+	display: list-item;
+}
+
+template {
+	display: none;
+}
+
+[hidden] {
+	display: none;
+}
+
+html {
+	font-size: 62.5%;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	line-height: 1.4;
+}
+
+::selection {
+	background: #b3d4fc;
+
+	text-shadow: none;
+}
+
+hr {
+	display: block;
+	height: 1px;
+	margin: 1em 0;
+	padding: 0;
+
+	border: 0;
+	border-top: 1px solid #ccc;
+}
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+	vertical-align: middle;
+}
+
+fieldset {
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
+
+textarea {
+	resize: vertical;
+}
 
 :root {
 	--button-height: 4.2rem;
@@ -38,7 +265,7 @@ body {
 
 	border-radius: 0.8rem;
 
-	background: inherit;
+	background: transparent;
 
 	color: inherit;
 	text-align: center;
@@ -52,7 +279,7 @@ body {
 
 	border: none;
 
-	background: inherit;
+	background: transparent;
 
 	caret-color: transparent;
 	color: inherit;
@@ -77,9 +304,7 @@ body {
 	display: none;
 }
 
-/* BUTTONS */
-
-[type='button'] {
+.calculator__button {
 	height: var(--button-height);
 	margin: var(--button-margin);
 	padding: var(--button-padding);
@@ -88,7 +313,7 @@ body {
 	border: none;
 	border-radius: 50%;
 
-	background: var(--theme-white);
+	background: transparent;
 
 	color: var(--theme-black);
 	font-size: 1.6rem;
@@ -97,16 +322,324 @@ body {
 	cursor: pointer;
 }
 
-[value='C'] {
+.calculator__button.--clear {
 	color: var(--theme-red);
+	font-size: 1.7rem;
 }
 
-[value='DEL'] {
+.calculator__button.--delete {
 	color: var(--theme-red);
-	font-size: 1.2rem;
+	font-size: 1.4rem;
 }
 
-[value='='] {
-	color: var(--theme-white);
+.calculator__button.--percent {
+	font-size: 1.7rem;
+}
+
+@media (hover: hover) and (pointer: fine) {
+	.calculator__button:hover {
+		background: var(--theme-white);
+	}
+
+	.calculator__button.--equals:hover {
+		background: var(--theme-red);
+
+		color: var(--theme-black);
+	}
+}
+
+.calculator__button:active,
+.calculator__button.--equals:active {
+	background: inherit;
+
+	color: var(--theme-black);
+}
+
+.calculator__button.--isActive {
+	background: var(--theme-white);
+}
+
+.calculator__button.--equals.--isActive {
 	background: var(--theme-red);
+
+	color: var(--theme-white);
+}
+
+@media (prefers-color-scheme: light) {
+	body {
+		background: var(--theme-grey);
+
+		color: var(--theme-black);
+	}
+
+	.calculator {
+		box-shadow: 0 0 15px 5px #00000040;
+	}
+
+	@media (hover: hover) and (pointer: fine) {
+		.calculator__button:hover {
+			background: var(--theme-white);
+		}
+
+		.calculator__button.--equals:hover {
+			background: var(--theme-red);
+
+			color: var(--theme-black);
+		}
+	}
+
+	.calculator__button:active,
+	.calculator__button.--equals:active {
+		background: inherit;
+
+		color: var(--theme-black);
+	}
+
+	.calculator__button.--isActive {
+		background: var(--theme-white);
+	}
+
+	.calculator__button.--equals.--isActive {
+		background: var(--theme-red);
+
+		color: var(--theme-white);
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background: var(--theme-black);
+
+		color: var(--theme-white);
+	}
+
+	.calculator {
+		box-shadow: 0 0 15px 5px #00000080;
+	}
+
+	.calculator__display::placeholder {
+		color: var(--theme-grey);
+	}
+
+	.calculator__button {
+		color: var(--theme-white);
+	}
+
+	@media (hover: hover) and (pointer: fine) {
+		.calculator__button:hover {
+			background: var(--theme-white);
+
+			color: var(--theme-black);
+		}
+
+		.calculator__button.--clear:hover,
+		.calculator__button.--delete:hover {
+			color: var(--theme-red);
+		}
+
+		.calculator__button.--equals:hover {
+			background: var(--theme-red);
+
+			color: var(--theme-white);
+		}
+	}
+
+	.calculator__button:active {
+		background: inherit;
+
+		color: var(--theme-white);
+	}
+
+	.calculator__button.--clear:active,
+	.calculator__button.--delete:active,
+	.calculator__button.--equals:active {
+		color: var(--theme-red);
+	}
+
+	.calculator__button.--equals:active {
+		background-color: var(--theme-black);
+	}
+
+	.calculator__button.--isActive {
+		color: var(--theme-black);
+	}
+
+	.calculator__button.--clear.--isActive,
+	.calculator__button.--delete.--isActive {
+		color: var(--theme-red);
+	}
+
+	.calculator__button.--equals.--isActive {
+		background: var(--theme-red);
+
+		color: var(--theme-white);
+	}
+}
+
+@media only screen and (min-width: 320px) {
+	html {
+		font-size: 12px;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+}
+
+@media only screen and (min-width: 768px) {
+	html {
+		font-size: 14px;
+	}
+}
+
+@media only screen and (min-width: 992px) {
+}
+
+@media only screen and (min-width: 1200px) {
+	html {
+		font-size: 16px;
+	}
+}
+
+@media (prefers-reduced-motion: reduce) {
+	* {
+		animation: none !important;
+		transition-duration: 0s !important;
+		transition-delay: 0s !important;
+	}
+}
+
+@media print,
+	(min-resolution: 1.25dppx),
+	(min-resolution: 120dpi),
+	(-webkit-min-device-pixel-ratio: 1.25) {
+}
+
+.--hidden,
+[hidden] {
+	display: none !important;
+}
+
+.--partiallyHidden {
+	border: 0;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+
+	white-space: nowrap;
+
+	overflow: hidden;
+}
+
+.--partiallyHidden.focusable:active,
+.--partiallyHidden.focusable:focus {
+	clip: auto;
+	height: auto;
+	margin: 0;
+	overflow: visible;
+	position: static;
+	width: auto;
+
+	white-space: inherit;
+}
+
+.--invisible {
+	visibility: hidden;
+}
+
+.--clearFix::before,
+.--clearFix::after {
+	display: table;
+
+	content: '';
+}
+
+.--clearFix::after {
+	clear: both;
+}
+
+.--forcedUnselectable {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.--forcedSelectable {
+	-webkit-user-select: all;
+	-moz-user-select: all;
+	-ms-user-select: all;
+	user-select: all;
+}
+
+.--scrollbarHidden {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+
+	overflow: auto;
+}
+
+.targetClassName::-webkit-scrollbar {
+	display: none;
+}
+
+@media print {
+	*,
+	*::before,
+	*::after {
+		box-shadow: none !important;
+
+		background: #fff !important;
+
+		color: #000 !important;
+		text-shadow: none !important;
+	}
+}
+
+a,
+a:visited {
+	text-decoration: underline;
+}
+
+a[href]::after {
+	content: ' (' attr(href) ')';
+}
+
+abbr[title]::after {
+	content: ' (' attr(title) ')';
+}
+
+a[href^='#']::after,
+a[href^='javascript:']::after {
+	content: '';
+}
+
+pre {
+	white-space: pre-wrap !important;
+}
+
+pre,
+blockquote {
+	border: 1px solid #999;
+
+	page-break-inside: avoid;
+}
+
+tr,
+img {
+	page-break-inside: avoid;
+}
+
+p,
+h2,
+h3 {
+	orphans: 3;
+	widows: 3;
+}
+
+h2,
+h3 {
+	page-break-after: avoid;
 }
