--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -255,7 +255,7 @@ body {
 
 .calculator {
 	align-items: center;
-	box-shadow: 0 0 15px 5px #00000040;
+	box-shadow: 0 0 1.5rem 0.5rem #00000040;
 	display: flex;
 	flex-wrap: wrap;
 	height: 40rem;
@@ -333,7 +333,7 @@ body {
 }
 
 .calculator__button.--percent {
-	font-size: 1.7rem;
+	font-size: 1.6rem;
 }
 
 @media (hover: hover) and (pointer: fine) {
