--- a/color-app/style.css
+++ b/color-app/style.css
@@ -45,13 +45,14 @@ textarea {
 
 :root {
 	--default-white: #fcfcfc;
+	--theme-red: #a00;
 
-	--userBox-height: 50rem;
-	--userBox-width: 30rem;
+	--userBox-height: 48rem;
+	--userBox-width: 32rem;
 
-	--generator-button-default-bg: #00000040;
-	--generator-button-hover-bg: #00000080;
-	--generator-button-text-color: #000000e6;
+	--generatorButton-bg: #00000040;
+	--generatorButton-bg-hover: #00000080;
+	--generatorButton-text-color: #000000e6;
 	--output-text-shadow: 0.16rem 0.16rem 0.32rem #00000080;
 }
 
@@ -97,22 +98,28 @@ body {
 	border: none;
 	border-radius: 0.8rem;
 
-	background: var(--generator-button-default-bg);
+	background: var(--generatorButton-bg);
 
-	color: var(--generator-button-text-color);
-	/* text-transform: uppercase; */
+	color: var(--generatorButton-text-color);
 
 	cursor: pointer;
 }
 
 .userBox__outputLabel {
 	margin-top: 1.6rem;
+
+	pointer-events: none;
 }
 
 .userBox__outputValue {
 	margin-bottom: 1.6rem;
 
 	cursor: default;
+	transition: transform 0.48s ease-out;
+}
+
+.userBox__outputValue:hover {
+	transform: scale(1.16);
 }
 
 .userBox__generatorButton,
@@ -204,15 +211,15 @@ body {
 
 @media (hover: hover) and (pointer: fine) {
 	.userBox__generatorButton:hover {
-		background: var(--generator-button-hover-bg);
+		background: var(--generatorButton-bg-hover);
 
 		color: var(--default-white);
 	}
 
 	.userBox__generatorButton:active {
-		background: var(--generator-button-default-bg);
+		background: var(--generatorButton-bg);
 
-		color: var(--generator-button-text-color);
+		color: var(--generatorButton-text-color);
 	}
 }
 
@@ -248,9 +255,9 @@ body {
 
 @media (prefers-reduced-motion: reduce) {
 	* {
-		animation: none !important;
-		transition-duration: 0s !important;
-		transition-delay: 0s !important;
+		animation: none;
+		transition-duration: 0s;
+		transition-delay: 0s;
 	}
 }
 
