--- a/color-app/style.css
+++ b/color-app/style.css
@@ -13,12 +13,12 @@ html {
 
 hr {
 	display: block;
-	height: 1px;
-	margin: 1em 0;
+	height: 0.16rem;
+	margin: 0.16rem 0;
 	padding: 0;
 
 	border: 0;
-	border-top: 1px solid #ccc;
+	border-top: 0.16rem solid #ccc;
 }
 
 audio,
@@ -44,16 +44,20 @@ textarea {
 /* Custom Author Styles */
 
 :root {
+	--default-black: #000000e6;
+	--default-black-opacity25: #00000040;
+	--default-black-opacity50: #00000080;
 	--default-white: #fcfcfc;
+	--default-white-opacity25: #fcfcfc40;
+	--default-white-opacity50: #fcfcfc80;
 	--theme-red: #a00;
 
 	--userBox-height: 48rem;
-	--userBox-width: 32rem;
+	--userBox-width: 40rem;
 
-	--generatorButton-bg: #00000040;
-	--generatorButton-bg-hover: #00000080;
-	--generatorButton-text-color: #000000e6;
 	--output-text-shadow: 0.16rem 0.16rem 0.32rem #00000080;
+	--system-fonts: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+		'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
 * {
@@ -64,7 +68,7 @@ textarea {
 }
 
 html {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: var(--system-fonts);
 }
 
 body {
@@ -79,7 +83,6 @@ body {
 
 .userBox {
 	align-items: center;
-	box-shadow: 0 0.8rem 3.2rem #00000040;
 	display: flex;
 	flex-direction: column;
 	height: var(--userBox-height);
@@ -89,37 +92,71 @@ body {
 
 	border-radius: 1.6rem;
 
-	backdrop-filter: contrast(0.95);
+	backdrop-filter: contrast(0.8);
 }
 
 .userBox__generatorButton {
-	width: 24rem;
+	width: 28rem;
 
 	border: none;
 	border-radius: 0.8rem;
 
-	background: var(--generatorButton-bg);
+	background: var(--default-black-opacity25);
 
-	color: var(--generatorButton-text-color);
+	color: var(--default-black);
+	font-weight: 500;
+	font-size: 1.64rem;
+	line-height: inherit;
 
 	cursor: pointer;
+	transition: background 0.32s, color 0.32s;
 }
 
 .userBox__outputLabel {
-	margin-top: 1.6rem;
+	height: 3.2rem;
+	margin-bottom: -2.4rem;
+	width: 16rem;
+
+	font-size: 1.3rem;
 
 	pointer-events: none;
+	z-index: 1000;
 }
 
 .userBox__outputValue {
+	height: 3.2rem;
 	margin-bottom: 1.6rem;
+	width: 28rem;
+
+	font-size: 1.6rem;
+	line-height: inherit;
 
 	cursor: default;
-	transition: transform 0.48s ease-out;
+	transition: transform 0.32s, text-shadow 0.32s;
 }
 
-.userBox__outputValue:hover {
-	transform: scale(1.16);
+.userBox__outputValue::after {
+	bottom: auto;
+	left: 50%;
+	margin-top: 2.4rem;
+	padding: 0.48rem;
+	position: absolute;
+	transform: translateX(-50%);
+	width: 16rem;
+
+	border-radius: 0.64rem;
+
+	background: var(--default-black-opacity25);
+
+	color: var(--default-white);
+	font-size: 1.2rem;
+	letter-spacing: 0.08rem;
+	text-align: center;
+
+	content: attr(data-tooltip);
+	opacity: 0;
+	transition: opacity 0.32s;
+	z-index: 1000;
 }
 
 .userBox__generatorButton,
@@ -127,7 +164,8 @@ body {
 .userBox__outputValue {
 	padding: 0.48rem;
 
-	letter-spacing: 0.16rem;
+	letter-spacing: 0.12rem;
+	line-height: inherit;
 	text-align: center;
 }
 
@@ -143,12 +181,12 @@ body {
 .--partiallyHidden {
 	border: 0;
 	clip: rect(0, 0, 0, 0);
-	height: 1px;
-	margin: -1px;
+	height: 0.16rem;
+	margin: -0.16rem;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
-	width: 1px; /* (1) */
+	width: 0.16rem; /* (1) */
 
 	white-space: nowrap;
 }
@@ -211,15 +249,25 @@ body {
 
 @media (hover: hover) and (pointer: fine) {
 	.userBox__generatorButton:hover {
-		background: var(--generatorButton-bg-hover);
+		background: var(--default-black-opacity50);
 
 		color: var(--default-white);
 	}
 
 	.userBox__generatorButton:active {
-		background: var(--generatorButton-bg);
+		background: var(--default-black-opacity25);
 
-		color: var(--generatorButton-text-color);
+		color: var(--default-black);
+	}
+
+	.userBox__outputValue:hover {
+		text-shadow: var(--output-text-shadow);
+
+		transform: translateY(-25%);
+	}
+
+	.userBox__outputValue:hover::after {
+		opacity: 1;
 	}
 }
 
@@ -232,6 +280,10 @@ body {
 @media only screen and (min-width: 600px) {
 	html {
 		font-size: 10px;
+	}
+
+	.userBox__generatorButton {
+		font-weight: 400;
 	}
 }
 
@@ -270,7 +322,6 @@ body {
 /* Normalize.css */
 
 html {
-	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
 }
 
@@ -283,8 +334,8 @@ main {
 }
 
 h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
+	font-size: 0.24rem;
+	margin: 0.64rem 0;
 }
 
 hr {
@@ -295,7 +346,7 @@ hr {
 
 pre {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size: 0.16rem;
 }
 
 a {
@@ -317,7 +368,7 @@ code,
 kbd,
 samp {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size: 0.16rem;
 }
 
 small {
@@ -333,11 +384,11 @@ sup {
 }
 
 sub {
-	bottom: -0.25em;
+	bottom: -0.24rem;
 }
 
 sup {
-	top: -0.5em;
+	top: -0.48rem;
 }
 
 img {
@@ -351,8 +402,8 @@ select,
 textarea {
 	font-family: inherit;
 	font-size: 100%;
-	line-height: 1.15;
-	margin: 0;
+	/* line-height: 1.15; */
+	/* margin: 0; */
 }
 
 button,
@@ -384,11 +435,11 @@ button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
-	outline: 1px dotted ButtonText;
+	outline: 0.16rem dotted ButtonText;
 }
 
 fieldset {
-	padding: 0.35em 0.75em 0.625em;
+	padding: 0.32rem 0.8rem 0.64rem;
 }
 
 legend {
@@ -421,7 +472,7 @@ textarea {
 
 [type='search'] {
 	-webkit-appearance: textfield;
-	outline-offset: -2px;
+	outline-offset: -0.24rem;
 }
 
 [type='search']::-webkit-search-decoration {
