--- a/color-app/style.css
+++ b/color-app/style.css
@@ -1,8 +1,26 @@
-/* Opinionated Base Styles */
+/* DEFAULT STYLES */
+
+:root {
+	--system-ui-fonts: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
 
 html {
+	box-sizing: border-box;
+
+	font-family: var(--system-ui-fonts);
 	font-size: 62.5%;
 	line-height: 1.4;
+	-webkit-text-size-adjust: 100%;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
 
 ::selection {
@@ -15,7 +33,6 @@ hr {
 	display: block;
 	height: 0.16rem;
 	margin: 0.16rem 0;
-	padding: 0;
 
 	border: 0;
 	border-top: 0.16rem solid #ccc;
@@ -31,302 +48,11 @@ video {
 }
 
 fieldset {
-	margin: 0;
-	padding: 0;
-
 	border: 0;
 }
 
 textarea {
 	resize: vertical;
-}
-
-/* Custom Author Styles */
-
-:root {
-	--default-black: #000000e6;
-	--default-black-opacity25: #00000040;
-	--default-black-opacity50: #00000080;
-	--default-white: #fcfcfc;
-	--default-white-opacity25: #fcfcfc40;
-	--default-white-opacity50: #fcfcfc80;
-	--theme-red: #a00;
-
-	--userBox-height: 48rem;
-	--userBox-width: 40rem;
-
-	--output-text-shadow: 0.16rem 0.16rem 0.32rem #00000080;
-	--system-fonts: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-		'Segoe UI Emoji', 'Segoe UI Symbol';
-}
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	position: relative;
-}
-
-html {
-	font-family: var(--system-fonts);
-}
-
-body {
-	align-items: center;
-	display: flex;
-	justify-content: center;
-	height: 100vh;
-	width: 100%;
-
-	font-size: 1.6rem;
-}
-
-.userBox {
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	height: var(--userBox-height);
-	justify-content: space-between;
-	padding: 1.6rem;
-	width: var(--userBox-width);
-
-	border-radius: 1.6rem;
-
-	backdrop-filter: contrast(0.8);
-}
-
-.userBox__generatorButton {
-	width: 28rem;
-
-	border: none;
-	border-radius: 0.8rem;
-
-	background: var(--default-black-opacity25);
-
-	color: var(--default-black);
-	font-weight: 500;
-	font-size: 1.64rem;
-	line-height: inherit;
-
-	cursor: pointer;
-	transition: background 0.32s, color 0.32s;
-}
-
-.userBox__outputLabel {
-	height: 3.2rem;
-	margin-bottom: -2.4rem;
-	width: 16rem;
-
-	font-size: 1.3rem;
-
-	pointer-events: none;
-	z-index: 1000;
-}
-
-.userBox__outputValue {
-	height: 3.2rem;
-	margin-bottom: 1.6rem;
-	width: 28rem;
-
-	font-size: 1.6rem;
-	line-height: inherit;
-
-	cursor: default;
-	transition: transform 0.32s, text-shadow 0.32s;
-}
-
-.userBox__outputValue::after {
-	bottom: auto;
-	left: 50%;
-	margin-top: 2.4rem;
-	padding: 0.48rem;
-	position: absolute;
-	transform: translateX(-50%);
-	width: 16rem;
-
-	border-radius: 0.64rem;
-
-	background: var(--default-black-opacity25);
-
-	color: var(--default-white);
-	font-size: 1.2rem;
-	letter-spacing: 0.08rem;
-	text-align: center;
-
-	content: attr(data-tooltip);
-	opacity: 0;
-	transition: opacity 0.32s;
-	z-index: 1000;
-}
-
-.userBox__generatorButton,
-.userBox__outputLabel,
-.userBox__outputValue {
-	padding: 0.48rem;
-
-	letter-spacing: 0.12rem;
-	line-height: inherit;
-	text-align: center;
-}
-
-/* Helper Classes */
-
-/* Hide visually and from screen readers */
-.--hidden,
-[hidden] {
-	display: none !important;
-}
-
-/* Hide visually but be available to screen readers: */
-.--partiallyHidden {
-	border: 0;
-	clip: rect(0, 0, 0, 0);
-	height: 0.16rem;
-	margin: -0.16rem;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 0.16rem; /* (1) */
-
-	white-space: nowrap;
-}
-
-/* Extends the .--partiallyHidden class to allow the element to be focusable when navigated to with a keyboard */
-.--partiallyHidden.focusable:active,
-.--partiallyHidden.focusable:focus {
-	clip: auto;
-	height: auto;
-	margin: 0;
-	overflow: visible;
-	position: static;
-	width: auto;
-
-	white-space: inherit;
-}
-
-/* Hide visually and from screen but maintain layout */
-.--invisible {
-	visibility: hidden;
-}
-
-/* ClearFix contains floats */
-/* The use of 'table' rather than 'block' is only necessary if using '::before' to contain the top-margin's of child elements */
-.--clearFix::before,
-.--clearFix::after {
-	content: '';
-	display: table;
-}
-
-.--clearFix::after {
-	clear: both;
-}
-
-.--forcedUnselectable {
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-
-.--forcedSelectable {
-	-webkit-user-select: all;
-	-moz-user-select: all;
-	-ms-user-select: all;
-	user-select: all;
-}
-
-.--scrollbarHidden {
-	-ms-overflow-style: none;
-	overflow: auto;
-	scrollbar-width: none;
-}
-
-.targetClassName::-webkit-scrollbar {
-	display: none;
-}
-
-/* Media Queries for Responsive Design */
-
-@media (hover: hover) and (pointer: fine) {
-	.userBox__generatorButton:hover {
-		background: var(--default-black-opacity50);
-
-		color: var(--default-white);
-	}
-
-	.userBox__generatorButton:active {
-		background: var(--default-black-opacity25);
-
-		color: var(--default-black);
-	}
-
-	.userBox__outputValue:hover {
-		text-shadow: var(--output-text-shadow);
-
-		transform: translateY(-25%);
-	}
-
-	.userBox__outputValue:hover::after {
-		opacity: 1;
-	}
-}
-
-@media only screen and (min-width: 320px) {
-	html {
-		font-size: 9px;
-	}
-}
-
-@media only screen and (min-width: 600px) {
-	html {
-		font-size: 10px;
-	}
-
-	.userBox__generatorButton {
-		font-weight: 400;
-	}
-}
-
-@media only screen and (min-width: 768px) {
-}
-
-@media only screen and (min-width: 992px) {
-	html {
-		font-size: 11px;
-	}
-}
-
-@media only screen and (min-width: 1200px) {
-}
-
-@media (prefers-color-scheme: light) {
-}
-
-@media (prefers-color-scheme: dark) {
-}
-
-@media (prefers-reduced-motion: reduce) {
-	* {
-		animation: none;
-		transition-duration: 0s;
-		transition-delay: 0s;
-	}
-}
-
-@media print,
-	(min-resolution: 1.25dppx),
-	(min-resolution: 120dpi),
-	(-webkit-min-device-pixel-ratio: 1.25) {
-}
-
-/* Normalize.css */
-
-html {
-	-webkit-text-size-adjust: 100%;
-}
-
-body {
-	margin: 0;
 }
 
 main {
@@ -379,7 +105,6 @@ sub,
 sup {
 	font-size: 75%;
 	line-height: 0;
-	position: relative;
 	vertical-align: baseline;
 }
 
@@ -402,8 +127,6 @@ select,
 textarea {
 	font-family: inherit;
 	font-size: 100%;
-	/* line-height: 1.15; */
-	/* margin: 0; */
 }
 
 button,
@@ -428,7 +151,6 @@ button::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner {
 	border-style: none;
-	padding: 0;
 }
 
 button:-moz-focusring,
@@ -447,7 +169,6 @@ legend {
 	color: inherit;
 	display: table;
 	max-width: 100%;
-	padding: 0;
 	white-space: normal;
 }
 
@@ -462,7 +183,6 @@ textarea {
 [type='checkbox'],
 [type='radio'] {
 	box-sizing: border-box;
-	padding: 0;
 }
 
 [type='number']::-webkit-inner-spin-button,
@@ -498,4 +218,268 @@ template {
 
 [hidden] {
 	display: none;
+}
+
+/* CUSTOM STYLES */
+
+:root {
+	--default-black: #000000e6;
+	--default-black-opacity25: #00000040;
+	--default-black-opacity50: #00000080;
+
+	--default-white: #fcfcfc;
+	--default-white-opacity25: #fcfcfc40;
+	--default-white-opacity50: #fcfcfc80;
+
+	--theme-red: #a00;
+
+	--userBox-height: 48rem;
+	--userBox-width: 40rem;
+	--text-shadow-opacity50: 0.16rem 0.32rem 0.48rem #00000080;
+	--box-shadow-opacity25: 0.16rem 0.8rem 0.8rem #00000040;
+}
+
+body {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	width: 100%;
+
+	font-size: 1.6rem;
+}
+
+.userBox {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: var(--userBox-height);
+	justify-content: space-between;
+	max-width: 80rem;
+	padding: 1.6rem;
+	width: var(--userBox-width);
+
+	border-radius: 1.6rem;
+
+	backdrop-filter: contrast(0.8);
+}
+
+.userBox__generatorButton {
+	width: 28rem;
+
+	border: none;
+	border-radius: 0.8rem;
+
+	background: var(--default-black-opacity25);
+
+	color: var(--default-black);
+	font-weight: 500;
+	font-size: 1.64rem;
+	line-height: inherit;
+
+	cursor: pointer;
+	transition: background 0.32s, color 0.32s;
+}
+
+.userBox__outputLabel {
+	height: 3.2rem;
+	margin-bottom: -3.2rem;
+	width: 16rem;
+
+	font-size: 1.3rem;
+
+	pointer-events: none;
+}
+
+.userBox__outputValue {
+	height: 3.2rem;
+	margin-bottom: 2.4rem;
+	width: 20.64rem;
+
+	font-size: 1.6rem;
+	line-height: inherit;
+
+	cursor: default;
+	transition: transform 0.32s, text-shadow 0.32s;
+	/* z-index: 1000; */
+}
+
+.userBox__outputValue::after {
+	bottom: auto;
+	left: 50%;
+	margin-top: 2.8rem;
+	padding: 0.48rem;
+	position: absolute;
+	transform: translateX(-50%);
+	width: 16rem;
+
+	border-radius: 0.64rem;
+
+	background: var(--default-black-opacity25);
+
+	color: var(--default-white);
+	font-size: 1.2rem;
+	letter-spacing: 0.08rem;
+	text-align: center;
+
+	content: attr(data-tooltip);
+	opacity: 0;
+	transition: box-shadow 0.32s, opacity 0.32s;
+	z-index: 1000;
+}
+
+.userBox__generatorButton,
+.userBox__outputLabel,
+.userBox__outputValue {
+	padding: 0.48rem;
+
+	letter-spacing: 0.12rem;
+	line-height: inherit;
+	text-align: center;
+}
+
+/* UTILITY CLASSES */
+
+/* Hide visually and from screen readers */
+.--hidden,
+[hidden] {
+	display: none !important;
+}
+
+/* Hide visually and from screen but maintain layout */
+.--invisible {
+	visibility: hidden;
+}
+
+/* Hide visually but be available to screen readers: */
+.--partiallyHidden {
+	border: 0;
+	clip: rect(0, 0, 0, 0);
+	height: 0.16rem;
+	margin: -0.16rem;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 0.16rem; /* (1) */
+
+	white-space: nowrap;
+}
+
+/* Extends the .--partiallyHidden class to allow the element to be focusable when navigated to with a keyboard */
+.--partiallyHidden.focusable:active,
+.--partiallyHidden.focusable:focus {
+	clip: auto;
+	height: auto;
+	margin: 0;
+	overflow: visible;
+	position: static;
+	width: auto;
+
+	white-space: inherit;
+}
+
+.--clearFix::before,
+.--clearFix::after {
+	content: '';
+	display: table;
+}
+
+.--clearFix::after {
+	clear: both;
+}
+
+.--forcedUnselectable {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.--forcedSelectable {
+	-webkit-user-select: all;
+	-moz-user-select: all;
+	-ms-user-select: all;
+	user-select: all;
+}
+
+.--scrollbarHidden {
+	-ms-overflow-style: none;
+	overflow: auto;
+	scrollbar-width: none;
+}
+
+.targetClassName::-webkit-scrollbar {
+	display: none;
+}
+
+/* MEDIA QUERIES */
+
+@media (hover: hover) and (pointer: fine) {
+	.userBox__generatorButton:hover {
+		background: var(--default-black-opacity50);
+
+		color: var(--default-white);
+	}
+
+	.userBox__generatorButton:active {
+		background: var(--default-black-opacity25);
+
+		color: var(--default-black);
+	}
+
+	.userBox__outputValue:hover {
+		text-shadow: var(--text-shadow-opacity50);
+
+		transform: translateY(-25%);
+	}
+
+	.userBox__outputValue:hover::after {
+		box-shadow: var(--box-shadow-opacity25);
+
+		text-shadow: none;
+
+		opacity: 1;
+	}
+}
+
+@media only screen and (min-width: 320px) {
+	html {
+		font-size: 9px;
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	html {
+		font-size: 10px;
+	}
+
+	.userBox__generatorButton {
+		font-weight: 400;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 992px) {
+	html {
+		font-size: 11px;
+	}
+}
+
+@media only screen and (min-width: 1200px) {
+}
+
+@media (prefers-color-scheme: light) {
+}
+
+@media (prefers-color-scheme: dark) {
+}
+
+@media (prefers-reduced-motion: reduce) {
+	* {
+		animation: none;
+		transition-duration: 0s;
+		transition-delay: 0s;
+	}
 }
