--- a/color-app/style.css
+++ b/color-app/style.css
@@ -10,7 +10,7 @@ html {
 
 	font-family: var(--system-ui-fonts);
 	font-size: 62.5%;
-	line-height: 1.4;
+	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
 }
 
@@ -23,7 +23,13 @@ html {
 	position: relative;
 }
 
-::selection {
+body {
+	font-family: inherit;
+	font-size: 1.6rem;
+}
+
+::selection,
+::-moz-selection {
 	background: #b3d4fc;
 
 	text-shadow: none;
@@ -31,11 +37,12 @@ html {
 
 hr {
 	display: block;
-	height: 0.16rem;
-	margin: 0.16rem 0;
+	height: 0.1rem;
+	margin: 1.6rem 0;
+	padding: 0;
 
 	border: 0;
-	border-top: 0.16rem solid #ccc;
+	border-top: 0.1rem solid #ccc;
 }
 
 audio,
@@ -60,19 +67,21 @@ main {
 }
 
 h1 {
-	font-size: 0.24rem;
-	margin: 0.64rem 0;
+	margin: 1.064rem 0;
+
+	font-size: 3.2rem;
 }
 
 hr {
 	box-sizing: content-box;
 	height: 0;
+
 	overflow: visible;
 }
 
 pre {
 	font-family: monospace, monospace;
-	font-size: 0.16rem;
+	font-size: 1.6rem;
 }
 
 a {
@@ -81,6 +90,7 @@ a {
 
 abbr[title] {
 	border-bottom: none;
+
 	text-decoration: underline;
 	text-decoration: underline dotted;
 }
@@ -94,7 +104,7 @@ code,
 kbd,
 samp {
 	font-family: monospace, monospace;
-	font-size: 0.16rem;
+	font-size: 1.6rem;
 }
 
 small {
@@ -105,15 +115,16 @@ sub,
 sup {
 	font-size: 75%;
 	line-height: 0;
+	position: relative;
 	vertical-align: baseline;
 }
 
 sub {
-	bottom: -0.24rem;
+	bottom: -0.4rem;
 }
 
 sup {
-	top: -0.48rem;
+	top: -0.8rem;
 }
 
 img {
@@ -125,8 +136,11 @@ input,
 optgroup,
 select,
 textarea {
+	margin: 0;
+
 	font-family: inherit;
 	font-size: 100%;
+	line-height: 1.15;
 }
 
 button,
@@ -150,6 +164,8 @@ button::-moz-focus-inner,
 [type='button']::-moz-focus-inner,
 [type='reset']::-moz-focus-inner,
 [type='submit']::-moz-focus-inner {
+	padding: 0;
+
 	border-style: none;
 }
 
@@ -157,18 +173,20 @@ button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
-	outline: 0.16rem dotted ButtonText;
+	outline: 0.1rem dotted ButtonText;
 }
 
 fieldset {
-	padding: 0.32rem 0.8rem 0.64rem;
+	padding: 0.56rem 1.2rem 1rem;
 }
 
 legend {
 	box-sizing: border-box;
-	color: inherit;
 	display: table;
 	max-width: 100%;
+	padding: 0;
+
+	color: inherit;
 	white-space: normal;
 }
 
@@ -182,6 +200,8 @@ textarea {
 
 [type='checkbox'],
 [type='radio'] {
+	padding: 0;
+
 	box-sizing: border-box;
 }
 
@@ -192,7 +212,7 @@ textarea {
 
 [type='search'] {
 	-webkit-appearance: textfield;
-	outline-offset: -0.24rem;
+	outline-offset: -0.2rem;
 }
 
 [type='search']::-webkit-search-decoration {
@@ -232,11 +252,14 @@ template {
 	--default-white-opacity50: #fcfcfc80;
 
 	--theme-red: #a00;
+	--theme-red-opacity25: #aa000040;
+	--theme-red-opactiy50: #aa000080;
 
-	--userBox-height: 48rem;
-	--userBox-width: 40rem;
-	--text-shadow-opacity50: 0.16rem 0.32rem 0.48rem #00000080;
 	--box-shadow-opacity25: 0.16rem 0.8rem 0.8rem #00000040;
+	--box-shadow-opacity50: 0.16rem 0.8rem 0.8rem #00000080;
+
+	--text-shadow-opacity25: 0.16rem 0.32rem 0.48rem #00000040;
+	--text-shadow-opacity50: 0.16rem 0.32rem 0.48rem #00000080;
 }
 
 body {
@@ -245,19 +268,17 @@ body {
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
-
-	font-size: 1.6rem;
 }
 
 .userBox {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	height: var(--userBox-height);
+	height: 48rem;
 	justify-content: space-between;
 	max-width: 80rem;
 	padding: 1.6rem;
-	width: var(--userBox-width);
+	width: 40rem;
 
 	border-radius: 1.6rem;
 
