--- a/templatecss/_print.css
+++ b/templatecss/_print.css
@@ -1,4 +1,4 @@
-/* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
+/* _main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
